force-app/main/default/objects/Temporal_Curso_Dia__c/Temporal_Curso_Dia__c.object-meta.xml
<CustomObject>
    <description>Tabla temporal con los dias cursos de la BBDD</description>
    <label>Temporal Curso Dia</label>
    <nameField>
        <label>Temporal Curso Dia</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Curso Dias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>