force-app/main/default/objects/Temporal_Curso_Dia__c/fields/CU_ANO__c.field-meta.xml
<CustomField>
    <fullName>CU_ANO__c</fullName>
    <label>CU_ANO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>