force-app/main/default/objects/Temporal_Curso_Dia__c/fields/CU_CURSO__c.field-meta.xml
<CustomField>
    <fullName>CU_CURSO__c</fullName>
    <label>CU_CURSO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>