force-app/main/default/objects/Temporal_Curso_Dia__c/fields/CU_FECHAS__c.field-meta.xml
<CustomField>
    <fullName>CU_FECHAS__c</fullName>
    <label>CU_FECHAS</label>
    <type>Date</type>
</CustomField>