force-app/main/default/objects/Temporal_Curso_Dia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>id__c</columns>
    <columns>CU_ANO__c</columns>
    <columns>CU_CURSO__c</columns>
    <columns>P_DDDKEY__c</columns>
    <columns>p_salesforce_id__c</columns>
    <columns>CU_FECHAS__c</columns>
    <columns>Estado_c__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>